[package]
name = "rapier-c-bind"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
log = "0.4.27"
rapier3d = { version = "=0.27.0-beta.0", features = [ "enhanced-determinism" ] }
unitybridge = { path = "../unitybridge" }

[target.aarch64-linux-android]
rustflags = [
    "-Clink-args=-Wl,-z,max-page-size=16384",
    "-Clink-args=-Wl,-z,common-page-size=16384",
    "-Clink-args=-Wl,--script=./android_linker.ld"
]